# body-makeup-evolution

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: main.py  pyproject.toml
backend/app/constant/: jwt.py  path.py
backend/app/core/: config.py  password.py  security.py
backend/app/crud/: auth.py
backend/app/database/: connection.py
backend/app/models/: __init__.py  auth.py
backend/app/routers/: auth.py
backend/app/schemas/: auth.py
docs/: README.md
frontend/: orval.config.ts  package.json
frontend/const/: auth.ts  middleware.ts
frontend/src/: middleware.ts
frontend/src/api/custom/: customFetch.ts
frontend/src/api/endpoints/: index.msw.ts
frontend/src/api/models/: commonParametersClientVersionParameter.ts  commonParametersLocaleParameter.ts  commonParametersRequestIDParameter.ts  index.ts  internalServerError.ts  internalServerErrorCode.ts  internalServerErrorResponse.ts  notFoundError.ts  notFoundErrorCode.ts  pet.ts  petType.ts  petsCreatePetParams.ts  petsDeletePetParams.ts  petsGetPetParams.ts  petsListPetsParams.ts  petsUpdatePetParams.ts  toy.ts  toysCreateToyParams.ts  toysDeleteToyParams.ts  toysListToysParams.ts  toysUpdateToyParams.ts  (+5 more)
frontend/src/app/: layout.tsx  page.tsx
frontend/src/const/: navigation.ts
frontend/src/msw/: handlers.ts
frontend/src/schemas/: changePasswordForm.ts  loginApi.ts  loginForm.ts  profileForm.ts  refreshApi.ts  registerApi.ts  registerForm.ts  userinfoApi.ts
frontend/src/utils/: auth.ts  fetcher.ts
schemas/: openapi.1.0.yaml  openapi.2.0.yaml
(+32 files in other folders)
